@@ -1,7 +1,7 @@
 {
     "name": "OVN_Southbound",
     "version": "21.2.0",
-    "cksum": "29145795 34859",
+    "cksum": "2732310741 35034",
     "tables": {
         "SB_Global": {
             "columns": {
@@ -18,6 +18,9 @@
                     "type": {"key": {"type": "uuid",
                                      "refTable": "SSL"},
                                      "min": 0, "max": 1}},
+                "supported_actions" : {"type": {"key": "string",
+                                       "min": 0,
+                                       "max": "unlimited"}},
                 "options": {
                     "type": {"key": "string", "value": "string",
                              "min": 0, "max": "unlimited"}},
