@@ -26,6 +26,8 @@ Post v25.03.0
    - Add a new logical switch option - enable-stateless-acl-lb with default
      value of false. This option should be set to true for logical switches
      with stateless ACL to work with load balancer.
+  - Added controller options: validate-northd-actions and
+     validate-actions-fail-mode for northd actions validation.
 
 OVN v25.03.0 - 07 Mar 2025
 --------------------------
